--- a/slick/docker-compose.yml
+++ b/slick/docker-compose.yml
@@ -4,10 +4,13 @@ services:
     image: postgres:latest
     restart: always
     environment:
+      POSTGRES_DB: 'user'
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - db:/var/lib/postgresql/data
-      - ./db/init-scripts.sql:/docker-entrypoint-initdb.d/init-scripts.sql
+      - postgres-volume:/var/lib/postgresql/data
+volumes:
+  postgres-volume:
+    driver: local
