--- a/slick/src/main/resources/application.conf
+++ b/slick/src/main/resources/application.conf
@@ -1,11 +1,14 @@
-postgresDB {
-    connectionPool = disabled
-    dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
-    properties = {
-        serverName = "localhost"
-        portNumber = "5432"
-        databaseName = "postgres"
+slick {
+    profile = "slick.jdbc.PostgresProfile$"
+    db {
+        driver = "org.postgresql.Driver"
+        url = "jdbc:postgresql://localhost:5433/user"
         user = "user"
         password = "password"
+        connectionPool = disabled
     }
+}
+
+logger {
+  "slick.jdbc.JdbcBackend.statement" = INFO
 }
