--- a/slick-poc-adv/src/main/resources/application.conf
+++ b/slick-poc-adv/src/main/resources/application.conf
@@ -6,9 +6,8 @@ slick {
       password = "password"
       driver = "org.postgresql.Driver"
       connectionPool = "HikariCP"
+      numThreads = 10
+      queueSize = 1000
+      maxConnections = 10
     }
-}
-
-logger {
-  "slick.jdbc.JdbcBackend.statement" = INFO
 }
