--- a/slick-poc-adv/src/main/resources/application.conf
+++ b/slick-poc-adv/src/main/resources/application.conf
@@ -5,9 +5,6 @@ slick {
       user = "user"
       password = "password"
       driver = "org.postgresql.Driver"
-      connectionPool = "HikariCP"
-      numThreads = 10
-      queueSize = 1000
-      maxConnections = 10
+      connectionPool = disabled
     }
 }
